Update 0163: TL;DR added for QSPI process

--- a/0162-2023-10-20.md
+++ b/0162-2023-10-20.md
@@ -98,9 +98,9 @@ Direct TTY access to Bus Pirate, to test reading SPI flash ROM device ID. `picoc
 2.  `m5` for SPI mode.
 3.  ENTER after each of: 4 1 2 1 2 2
 4.  `W` (capital) to turn on power
-5.  Read MFR/DEV ID: `{0x90 0 0 0]`:
+5.  Read MFR/DEV ID: `{0x9F 0 0 0]`:
     ```
-    SPI>{0x90 0 0 0]
+    SPI>{0x9F 0 0 0]
     /CS ENABLED
     WRITE: 0x9F READ: 0x00 
     WRITE: 0x00 READ: 0x1F 
