--- a/0163-2023-10-22.md
+++ b/0163-2023-10-22.md
@@ -11,11 +11,49 @@
     *   I ended up using 26.6175MHz (actually 26.620370MHz is nearest the PLL can get) in the repo.
     *   Merged vga_mode stuff from the qspi branch into main and tagged it [0.2](https://github.com/algofoogle/tt05-vga-spi-rom/releases/tag/0.2) -- new update to [my TT05 submission #192](https://app.tinytapeout.com/projects/192).
 
+
 # Goals
 
 *   Test whether SPI MOSI/MISO still work with 1k&ohm; resistors in series. I'd like to include these for safety, at least in the early stages.
 *   Get QSPI reads working in tt05-vga-spi-rom
 *   Add QSPI reads to raybox-zero
+
+
+# Findings
+
+## TL;DR
+
+*   Use ~500&ohm; inline with MOSI to provide basic protection; it's the only pin that really needs to switch between output/input. I'm using 540&ohm; which will limit 3.3V to ~6mA if there's a short/contention.
+*   For Winbond W25Q and Renesas AT25SF chips (and maybe others; seems to work with 'BergMicro' BG25Q80A), just *program* QE to be set (non-volatile), and then quad mode is always able to be used.
+*   This in turn means we don't have to worry about /WP and /HOLD.
+*   Overall this should just simplify our design logic to:
+    1.  Pre-program the chip to set QE bit. Then, in the design...
+    2.  (Optional): Send AB (release power-down)
+    3.  Assert /CS and send 6B
+    4.  Send 24 address bits
+    5.  Switch our design to quad inputs, and send 8 dummy clocks
+    6.  Read quad data: `io[3:0]` gets `D[7:4]` first, then `D[3:0]` next.
+    7.  Read as many bytes as needed.
+    8.  Release /CS when done.
+    9.  1 clock later, switch back to single-SPI mode (i.e. reassert MOSI as an output, when we know the chip should've gone HiZ).
+
+
+## More detail
+
+*   MOSI seems to work OK with an inline 1k&ohm; resistor for protection. When testing with my FPGA, I might drop this to 470&ohm; or something
+*   In order to do any quad reads or other quad I/O, Winbond W25Q and Renesas AT25SF devices both need the QE bit set in WSR2.
+*   QE will take a volatile setting (until POR or system reset) by issuing command 50h (volatile WSR enable), then issuing command 31h (WSR2) with data 02h. This works for both the Renesas chips (**verified**) and supposedly also the Winbond chips.
+*   However, there is a better way. That is to write QE into WSR2 as a non-volatile setting: issue command 06h (Write Enable), then issue command 31h with data 02h (as above). Then 5~30ms later[^1] it should be written as a non-volatile setting.
+    *   This should be an acceptable/dependable/repeatable way to ensure the QE bit remains in effect when used with our target design (host controller), without needing extra logic to do command 50h or 06h.
+    *   The **other important advantage** is that it should prevent /HOLD[^2] from mucking us around:
+        >   When the QE bit of Status Register 2 is 1, quad-SPI communication is enabled, and the pin is used as 1/0 pin 103 in any command that makes use of quad-SPI. In this setting, do not use the pin for pausing communication.
+*   If our design can do so, it might be a good idea to ensure that our design asserts /HOLD with a high value when we're not otherwise using it as an output from the SPI memory, just to be sure it won't be interpreted by the memory as a valid hold signal.
+*   /WP shouldn't be a problem if just connected as an I/O to our design: It's internally pulled high, it only takes effect if SRP1 and SRP0 have been explicitly configured to use it (which is not the factory default), and [according to the datasheet](https://www.renesas.com/us/en/document/dst/at25sf081b-datasheet#page=7) this function should be disabled when QE is set:
+    >   When the Quad Enable (QE) bit of Status Register 2 is 1, quad-SPI communication is enabled, and the pin is used as 1/0 pin 102 in any command that makes use of quad-SPI. In this setting, do not use the pin for write-protection.
+*   I've found that my Renesas AT25SF081B and mystery Berg Micro BG25Q80A both support 16-bit WSR1 (command 01) writes that can set/clear QE, including non-volatile (command 06) and volatile (command 50). According to the Winbond doco, that should all work too for W25Q series.
+
+[^1]: I think I've observed it occurs basically instantaneously for the QE bit, but this might not be true of the other bits in WSR2.
+[^2]: The [datasheet says /HOLD is disabled when QE is set](https://www.renesas.com/us/en/document/dst/at25sf081b-datasheet#page=49&zoom=100,62,388). Hopefully this is accurate, because I would normally only expect that to hold true when *using* a quad command.
 
 # Attempts at QSPI
 
@@ -27,21 +65,130 @@
     *   Use Bus Pirate to manually read each of BG25Q80 and AT25SF081B.
     *   BP read SR1 (command 05)
     *   BP read SR2 (command 35)
-    *   BP set QE: WEN (06), WSR2 (31) + 02 (QE bit asserted).
+    *   BP set WEN (06)
+    *   BP read SR1 again
+    *   BP set QE: WSR2 (31) + 02 (QE bit asserted).
     *   BP read SR1 again; check for changes, esp. for WIP.
     *   BP read SR2 again; prove QE is set.
     *   Power-cycle the chip.
     *   Read SR1&2 again: Is QE permanently set?
-*   Hopefully this process should be compatible with both W25Q128JV (and other smaller chips?) and AT25SF081B:
-    1.  Pre-program the chip to set QE bit. Then, in the design...
-    2.  (Optional): Send AB (release power-down)
-    3.  Assert /CS and send 6B
-    4.  Send 24 address bits
-    5.  Switch our design to quad inputs, and send 8 clocks
-    6.  Read quad data: `io[3:0]` gets `D[7:4]` first, then `D[3:0]` next.
-    7.  Release /CS
-    8.  1 clock later, switch back to single-SPI mode
 
+### Preparing QE/SR tests
+
+Connect to Bus Pirate terminal: `picocom -b 115200 /dev/ttyUSB0`
+
+1.  Hit enter, expect `HiZ>` prompt.
+2.  `m5` for SPI mode.
+3.  ENTER after each of: 4 1 2 1 2 2
+4.  `W` (capital) to turn on power
+5.  Read MFR/DEV ID: `[0x9F r:3]`:
+    ```
+    SPI>[0x9F r:3]
+    /CS ENABLED
+    WRITE: 0x9F 
+    READ: 0x1F 0x85 0x01 
+    /CS DISABLED
+    SPI>
+    ```
+    *   MFR: 0x1F
+    *   DEV: 0x8501
+    *   This is consistent with what the datasheet says we should get for AT25SF081B.
+6.  Exit picocom: CTRL+A then CTRL+X
+
+### Testing QE on AT25SF081B
+
+1.  Read MFR/DEV ID: `[0x9F r:3]` -- got back 1F 85 01, which is correct.
+2.  Read SR1: `[0x05 r:3]` -- got back 00 00 00, which is to be expected.
+3.  Read SR2: `[0x35 r:3]` -- got back 00 00 00, also to be expected.
+4.  Issue WEN: `[0x06]`
+5.  Read SR1 again -- got back 02 02 02; good, WEL bit now set.
+6.  Issue Write Disable: `[0x04]`
+7.  Read SR1 again -- got back 00 00 00; good, WEL bit now clear.
+8.  Try WSR2 with WEL **disabled**, to turn on QE bit, then immediately read SR1 and SR2: `[0x31 0x02][0x05 r][0x35 r]` -- expected to not have any effect, and this is what happens: We get back 00 00 (for both SRs).
+8.  Issue "Write Enable for Volatile Status Register (50h)": `[0x50]`
+9.  Again try WSR2, *in volatile mode*, to turn on QE bit, then immediately read SR1 and SR2: `[0x31 0x02][0x05 r][0x35 r]` -- **oh, it worked,** despite the AT25SF081B datasheet implying 50h pairs with only 01h. We go back 00 (SR1) and **02** (SR2), showing QE bit enabled.
+10. Clear volatile QE: `[0x50][0x31 0][0x05 r][0x35 r]` -- expect final result to be 0x00
+11. Set it again: `[0x50][0x31 0x02][0x05 r][0x35 r]` -- expect final 0x02
+12. Prove that it cannot be cleared without command 50: `[0x31 0][0x05 r][0x35 r]` -- expect final still 0x02
+13. Clear it again.
+14. Now we'll write non-volatile QE, but also toggle /CS and read a stream of SR1 for WIP bit. NOTE: Datasheet says <code>t<sub>WRSR</sub></code> (Write Status Register Time) is typically 5**ms** and as much as 30ms. HUGE time!
+    *   I ran this: `[0x06][0x31 0x02][0x05 r:10][0x35 r:10][0x05 r:10 &:100 r &:500 r% r% r% r% r% r% r%:5 r%:10 r%:10 r%:100 r][0x35 r:10]`
+    *   The result seems to be immediate!
+
+            /CS ENABLED
+            WRITE: 0x06 
+            /CS DISABLED
+
+            /CS ENABLED
+            WRITE: 0x31 
+            WRITE: 0x02 
+            /CS DISABLED
+
+            /CS ENABLED
+            WRITE: 0x05 
+            READ: 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 0x00 
+            /CS DISABLED
+
+            /CS ENABLED
+            WRITE: 0x35 
+            READ: 0x02 0x02 0x02 0x02 0x02 0x02 0x02 0x02 0x02 0x02
+            /CS DISABLED
+
+            ...
+
+        For reference the crucial parts are where the BUSY bit (0) is never set in WSR1 (read with command 05), and command 35 returns that the QE bit is set (0x02). I confirmed that the QE bit was *not* previously set, so I trust that this worked.
+15. I turned off the power supplies with lowercase `w`. WARNING: There still seems to be an issue in the BP or something where turning off power supplies still leaves MOSI and CS asserted, but as a result they're still 'leaking' power into the chip that can be seen with `v` -- To get around this, I drove /CS low with `[` and checked `v`: It fell from 2.61V to 2.41V. Now how to get MOSI low? `_` doesn't do it. Hmm... Ah, `0;1` should do: Write one `0` bit. Yes... `v` confirms. Power LED is now off too.
+16. Turn the chip back on with `W`
+17. Read QE: `[0x35 r:3]` -- BP BUG: Still only using `;1` (single-bit) mode. Get back to normal with `0x35;8`
+18. Prove we're stable with `[0x9F r:3]`
+19. Read QE: `[0x35 r:3]` -- Yep, we get 02 02 02 back. QE still asserted.
+20. VOLATILE write to disable QE: `[0x50][0x31 0][0x35 r:3]` -- yep, returns 00 00 00.
+21. Power off: `[0x00]w[`
+22. Unplug the chip, then unplug the BP.
+23. Replug the BP, plug in the chip.
+24. Go back into terminal and repeat steps 1..5 from "[Preparing](#preparing-qesr-tests)" above.
+25. Read QE: `[0x35 r:3]` -- yep, QE has stuck around; returns 02 02 02
+26. OH! I discovered this sequence works too (for example):
+    *   Set QE (volatile): `[0x50][0x01 0 2][0x35 r]`
+    *   Clear QE (volatile): `[0x50][0x01 0 0][0x35 r]`
+    *   ...not documented? i.e. 16-bit WSR1.
+
+### Testing QE on BG25Q80
+
+1.  Do steps 1..5 from "[Preparing](#preparing-qesr-tests)" above. Oddly, on the first try it didn't give a valid response to command 9F. On a retry it gave E0 40 14.
+2.  Read SR1: `[0x05 r:3]` -- got back 00 00 00. OK.
+3.  Read SR2: `[0x35 r:3]` -- got back 00 00 00. Not sure if that worked or not. I'll trust it.
+4.  Issue WEN: `[0x06]`
+5.  Read SR1 again -- got back 02 02 02; good, WEL bit now set.
+6.  Issue Write Disable: `[0x04]`
+7.  Read SR1 again -- got back 00 00 00; good, WEL bit now clear.
+8.  `[0x31 0x02][0x05 r][0x35 r]` -- no effect, as expected.
+9.  Issue "Write Enable for Volatile Status Register (50h)": `[0x50]` -- then `[0x31 0x02][0x05 r][0x35 r]` -- **didn't work**; just returned 00 still for WSR2.
+10. Try *programming* QE to be set: `[0x06][0x31 0x02][0x05 r:10][0x35 r:10][0x05 r:10 &:100 r &:500 r% r% r% r% r% r% r%:5 r%:10 r%:10 r%:100 r][0x35 r:10]` -- **that didn't work either**; how does the ESP8266 do quad reads from this chip?? Might be worth investigating.
+11. Try doing it using a 16-bit WSR1: `[0x06][0x01 0x00 0x02][0x05 r:10][0x35 r:10][0x05 r:10 &:100 r &:500 r% r% r% r% r% r% r%:5 r%:10 r%:10 r%:100 r][0x35 r:10]` -- **that DID work**
+12. Power off the chip: `[0x00]w[`
+13. Unplug/replug the chip
+14. Power on: `W`
+15. Test MFR/DEV: `[0x9F r:3]` -- again, didn't work until 2nd try. Maybe it's because /CS starts off low?
+16. `[0x35 r]` -- oh, it wasn't retained. Weird. By design maybe?
+17. Huh, how about that. This works: `[0x50][0x01 0x00 0x02][0x35 r]`
+18. Power off like this, now: `[0x00]w` -- `v` still shows 1.9V because of high /CS, but oh well.
+19. Unplug/replug the chip, then `W`
+20. `[0x9F r:3]`
+21. `[0x35 r:3]` -- 00 00 00 (QE clear)
+22. `[0x50][0x01 0x00 0x02][0x35 r]` -- 02 (QE set)
+23. `[0x50][0x01 0x00 0x00][0x35 r]` -- 00 (QE clear)
+24. `[0x06][0x01 0x00 0x02][0x35 r]` -- 02 (QE set)
+25. Hot unplug/replug
+26. `[0x9F r:3]` -- E0 40 14
+27. `[0x35 r]` -- 02 (QE SET still??)
+28. Power off: `[0x00]w`
+29. Unplug/replug
+30. Power on: `W`
+31. `[0x9F r:3]` -- E0 40 14
+32. `[0x35 r]` -- 02 (QE still retained)
+
+OK, I must've been making a mistake last time it appeared to clear. Let's assume that with all 3 chips (AT25SF081B and BG25Q80 verified, W25Q unverified) we can pre-write QE bit to be on.
 
 ## QSPI notes
 
@@ -67,7 +214,7 @@ Anyway, Tholin's method seems to do this:
 2.  Send AB: relase from power-down, if in effect
 3.  Send 06: WEN (Write Enable)
 4.  Send 01: Write Status Register, followed by 02 (simply WEL; no effect because it's R/O), then by 02 again (QE<=1 in this case).
-5.  Send EB: Quad I/O Fast Read. Then chip goes into quad input; send it address 000000h followed by A5h mode (actually it just seems like bits `--10----` are the only ones that matter, and they specify continuous mode). After another 
+5.  Send EB: Quad I/O Fast Read. Then chip goes into quad input; send it address 000000h followed by A5h mode (actually it just seems like bits `--10----` are the only ones that matter, and they specify continuous mode). After another 4 dummy clocks, it then does 2 more clocks to read the first byte.
 
 
 # SPI memory behaviours
