--- a/0163-2023-10-22.md
+++ b/0163-2023-10-22.md
@@ -10,6 +10,9 @@
     *   I included a `vga_mode` option for selecting between 640x480@60Hz and 1440x900@60Hz timing. Ideal clock for this (at least for my testing) is ~26.6175MHz, because in Mode 1 this gets very clear 1440x900@60, and in Mode 0 it still works OK as 640x480@63.
     *   I ended up using 26.6175MHz (actually 26.620370MHz is nearest the PLL can get) in the repo.
     *   Merged vga_mode stuff from the qspi branch into main and tagged it [0.2](https://github.com/algofoogle/tt05-vga-spi-rom/releases/tag/0.2) -- new update to [my TT05 submission #192](https://app.tinytapeout.com/projects/192).
+*   Worked out how I'm going to do QSPI (see [TL;DR](#tldr)).
+*   Implemented basic SPI `io[3:0]` with direction switch for `io[0]` (MOSI).
+*   Proved my chip still works with it.
 
 
 # Goals
