Update 0164 with plan for tt05vsr QSPI reads

--- a/0164-2023-10-23.md
+++ b/0164-2023-10-23.md
@@ -6,3 +6,31 @@
 
 # Implementing QSPI in tt05vsr
 
+# Plan of attach
+
+*   Add a logic switch to run different tests (quad mode) in the 2nd half of the screen.
+*   Don't worry about buffering for now. Just do direct quad IO output to screen.
+*   Map `in[2:0]` to B, G, and R middle bits.
+*   Map `in[3]` to a left shift (brighten) for overall BGR111 value.
+
+# Sequence for: Quad Output Fast Read Array (6Bh)
+
+Per [command 6Bh in datasheet](https://www.renesas.com/us/en/document/dst/at25sf081b-datasheet#page=18&zoom=100,62,550),
+below is the sequence for AT25SF081B, and I think also Winbond W25Q parts, and probably most QSPI devices:
+0.  QE bit must be set. This can be *programmed into* the chip in advance.
+    Other options exist, but out of scope. Hence this design assumes your
+    SPI chip already has QE bit set automatically at power-on.
+1.  Assert /CS, make sure io0 is set to OUTPUT.
+2.  Clock in CMD[7:0] = 6Bh
+3.  Clock in ADDR[23:0]
+4.  (On falling SCLK edge of cycle 31 (CLK rising edge beginning cycle 32) switch io0 to INPUT.)
+5.  Do 8 more dummy clocks
+6.  Read then starts:
+    *   For each even clock after that, chip should give us D[7:4] on io[3:0].
+    *   For each odd clock after that, chip should give us D[3:0] on io[3:0].
+7.  When we want to stop reading, release /CS, and io0 could *probably* just stay in INPUT mode since the next round will start with step 1 above again, when includes setting io0 back to OUTPUT.
+
+
+# Notes
+
+*   What happens if you try to do QSPI Quad Fast Read command 6Bh without QE bit enabled? Does it still output data with 4-bit alignments, but only MISO is valid? Or does it output nothing? Something we can test...
