--- a/tips/2310C.md
+++ b/tips/2310C.md
@@ -12,3 +12,4 @@ These are just notes for myself: Checks I need to remember to do to be sure my c
 *   Look at GDS in KLayout and make sure every pin is wired up sensibly
 *   Check CTS
 *   Make sure we're using correct directives in `config.tcl`
+*   Make sure RESET definitely suspends all switching, even if we still have a clock coming in. This is to make sure we don't create noise for other designs on the chip (esp. analog ones).
