Update 0165 re plan, Quartus PLL, SPI glitch RC filter idea, wall edge glitch, extra rbzero features

--- a/0165-2023-10-24.md
+++ b/0165-2023-10-24.md
@@ -6,3 +6,124 @@
 
 # raybox-zero OpenLane hardening
 
+# SPI glitching yesterday
+
+I suspect the glitching problems I was having with one of my SPI flash ROM memories yesterday (BG25Q80) might've been due to SCLK not having a clean signal. Certainly when I touched it with my finger or added a dangling wire it seemed to improve, and one of the symptoms I'm seeing is that occasionally an output nibble appears to be skipped; this could be due to the chip detecting an extra SCLK falling edge.
+
+I don't think the other signals are experiencing glitching (but maybe instead causing it or contributing to it), which perhaps explains why certain data streams exhibit the problem, and consistently, and others don't.
+
+The solution might be to put an RC lowpass filter on SCLK, to limit it to the frequency range we expect. For example, this design should suppress some rough transients, and hopefully won't affect the actual ~27MHz SCLK sense too much:
+
+![Transients RC filter](i/0165-rc-filter.png)
+
+TODO: Add photos of tt05vsr `qspi` using each of the two flash ROMs.
+
+
+# Quartus PLL
+
+## Using Quartus to implement an Altera Cyclone IV PLL
+
+I forgot to document [this from 0159](https://github.com/algofoogle/journal/blob/2ef66ad43e62b69ae2ccb4dc9252279873a9a513/0159-2023-10-14.md?plain=1#L17).
+
+I used this guide: [Tutorial: Instantiating and Using a PLL on the DE10‐LITE](https://www.ece.ucdavis.edu/~bbaas/180/tutorials/using.a.PLL.pdf).
+
+Steps in Quartus:
+
+1.  Tools => IP Catalog
+2.  RHS popup: Library => Basic Functions => Clocks; PLLs and Resets => PLL => double-click "ALTPLL".
+3.  Specify `de0nano` folder as the place to save the files, and append `pll.v` as the filename on the end.
+4.  MegaWizard Plug-In Manager should pop up after a few seconds.
+5.  Set inclk0 input frequency to 50MHz, matching the DE0-Nano hardware.
+6.  **Next**: Untick `areset` and `locked`
+7.  **Next** multiple times until getting to section 3, subsection "clk c0":
+    ![ALTPLL Section 3 (Output Clocks) subsection "clk c0"](i/0165-pll-output-config.png)
+8.  Select first option, "Enter output clock frequency:" and select the desired target speed. In my case, I'll try 24.0MHz. With VGA timing, if this syncs, it should be at ~57Hz.
+9.  **Finish**: Tick `pll_inst.v`, turn off `pll_bb.v`
+10. **Finish**: After a short while, it should prompt you with 'Quartus Prime IP Files' asking to add the IP to the proejct. Click **Yes**.
+11. Created files that we want to commit to the repo:
+    ```
+    pll_inst.v      JUST TEMPLATE Verilog to copy into our TOP module.
+    pll.ppf         Simple XML 'pinplan' file??
+    pll.qip         Quartus project IP reference/inclusion file?
+    pll.v           Actual fine-grained PLL parameters
+    ```
+12. Copy contents of `pll_inst.v` into `raybox-zero_de0nano.v`:
+    ```verilog
+    // Quartus-generated PLL module, generating 24MHz clock from system 50MHz source.
+    // For more info see:
+    // https://github.com/algofoogle/journal/blob/master/0165-2023-10-24.md#quartus-pll
+    pll	pll_inst (
+    .inclk0 (CLOCK_50),
+    .c0     (pixel_clock)
+    );
+    ```
+
+NOTE: When using the PLL, I would then comment out my 'generated' (`clock_25`) entry in the SDC file.
+
+NOTE: To edit the PLL parameters, you CAN go via the Project Navigator to 'IP Components' and then double-click ont he ALTPLL, but I found that this would only work once and then end up greyed out. To get around that, I would instead go to the project 'Hierarchy', expand my design until I got to the `pll_inst`, right-click that and select 'MegaWizard...'
+
+
+# Wall edge glitlch
+
+In raybox-zero I've noticed that the texture on the very edge of wall block corners seems to be the one from the all *behind* it, sort of, sometimes.
+
+I think the problem might be that the wall ID (plus also texu) might be leaking thru from the previous line. This could indicate either an FSM error, or an error when registering the wall/texture data, i.e. the distance appears to be correct, but the texture is delayed by 1 line. 
+
+This manifests as a wall texture from behind being blown up on a left corner:
+
+TODO: Photo
+
+...or being shrunk down on a right corner:
+
+TODO: Photo
+
+It's also possible that it's the *distance* that's delayed?? In fact this seems more likely because on left corners it's a mid-slice of the wall behind, and on right corners it's an edge slice of the wall in front.
+
+
+# Extra raybox-zero features to add before final submission
+
+*   Implement raybox-client.py (and de0nano wiring) support for 'SPI register access'.
+*   SPI reg: Texture address addend. One for each wall-ID-side-combo? Add 64 means we can pan thru a larger texture area if we want. Add 4096 means we shift to the next texture (might be the other side). Add 8192 means we shift to the next wall ID.
+*   SPI reg: Texture U/V slide
+*   SPI reg: Option to enable a number of bits of the map cell address (X and/or Y) to be used to build the upper bits of the texture address, i.e. this could allow different textures for different regions (or individual cells) of the map.
+    *   Current address range is:
+        *   Wall ID: 2
+        *   Side: 1
+        *   Tex U: 6
+        *   Tex V: 6
+        *   Total: 15 bits (32kB RAM)
+    *   At most we'd be looking at this many address bits:
+        *   Map X: 6
+        *   Map Y: 6
+        *   Wall ID: 2
+        *   Side: 1
+        *   Tex U: 6
+        *   Tex V: 6
+    *   Total: 27 bits -- oh that's too many!
+*   SPI reg: Map divider, i.e. X and Y values that put in a false 'crosshair' wall stripe to create a smaller map region.
+*   Try Q12.12? Might affect timing.
+
+
+# EW submission prep
+
+*   [No analog support on Caravel IOs 6:0 and 37:36](https://github.com/efabless/caravel/blob/cc1cd7f7769291bbe8536b1ab0d6799ddfb4ca71/verilog/rtl/__user_project_wrapper.v#L68-L72)
+*   Noise/clock/reset safety:
+    *   Make sure everything CAN be held in reset! This could be a simple XOR on 2 LAs: `reset_n = reset1 ^ reset2` where 1 and 2 are LA pins. Thus, if LAs start up with all 0, reset_n is asserted. If LAs start up with all 1, again reset_n is asserted. If LAs are set to be *different* from each other, reset is released and the design can run.
+    *   Clock gate and reset lock could be driven by an XOR on 2 or more LA pins, to increase certainty that we won't get an accidental activation of my design? e.g. `LA[1:0]` must be 01 or 10 to activate, or just check for `LA[3:0]==1001` or something.
+    *   Find out about the clock source. For instance, there's `mprj_clock` (core?) and `mprj_clock2` (PLL secondary)? Ellen/John suggested using [`user_clock2`](https://github.com/efabless/caravel/blob/main/verilog/rtl/__user_project_wrapper.v#L75) for safety. Is this "secondary clock"? I assume this is because the PLL can be disabled (and hence there is no secondary clock output?) while the incoming clock can be muxed to bypass the PLL and go directly into Caravel (and form the primary clock?)
+*   Could use ["UPW"](https://github.com/efabless/caravel/blob/main/verilog/rtl/__user_project_wrapper.v) to decide how to name my top level pins.
+
+
+# Plan of attack
+
+*   try running OL harden on laptop
+*   find out: how slow can we run the pixel clock?
+*   add photos and notes about SPI board
+*   finish implementing macro pins logic, inc. oebs
+*   work out how to name the macro pins so they match up with caravel, etc: do caravel version as well as matt's wrapped MPW convention
+*   work out how many actual pins we have to work with on EW chipIgnite, and whether we should go for 3-bit grey instead of RGB111, and thus we could get away with just 2 of the 4 QSPI read pins (since we can read less data) -- in that case, try DSPI instead of QSPI?
+*   what are caravel IOs 36 and 37 for?
+
+# Notes
+
+*   On my desktop PC I reduced my MPW8 VM to 8GB RAM because I'll do my main gutsy GDS hardens on my laptop (16~20GB).
