--- a/0165-2023-10-24.md
+++ b/0165-2023-10-24.md
@@ -53,8 +53,8 @@ Steps in Quartus:
     // For more info see:
     // https://github.com/algofoogle/journal/blob/master/0165-2023-10-24.md#quartus-pll
     pll	pll_inst (
-    .inclk0 (CLOCK_50),
-    .c0     (pixel_clock)
+      .inclk0 (CLOCK_50),
+      .c0     (pixel_clock)
     );
     ```
 
@@ -62,8 +62,28 @@ NOTE: When using the PLL, I would then comment out my 'generated' (`clock_25`) e
 
 NOTE: To edit the PLL parameters, you CAN go via the Project Navigator to 'IP Components' and then double-click ont he ALTPLL, but I found that this would only work once and then end up greyed out. To get around that, I would instead go to the project 'Hierarchy', expand my design until I got to the `pll_inst`, right-click that and select 'MegaWizard...'
 
+# How slow can I run the VGA pixel clock?
 
-# Wall edge glitlch
+These are tests done with my HP L1908wm monitor, using VGA timing that would normally be 640x480@60Hz (actually 59.94Hz) with a 25.175MHz clock:
+
+*   12.5875 MHz: No signal
+*   20.0000 MHz: Shows sync'd image with warning (would be 47.62Hz)
+*   20.2500 MHz: Good @48.21Hz
+*   20.5800 MHz: Good @49Hz (exactly)
+*   21.0000 MHz: Good @50Hz (exactly)
+*   22.0000 MHz: Good @52Hz
+*   23.0000 MHz: Good @55Hz
+*   24.0000 MHz: Good @57Hz
+*   25.1750 MHz: Good @60Hz (59.94Hz exatly)
+*   31.5000 MHz: Good @75Hz
+*   32.5000 MHz: Good @77Hz (77.38Hz)
+*   33.0000 MHz: Shows sync'd image with warning (would be 78.57Hz)
+*   33.6000 MHz: Shows sync'd image with warning (would be 80Hz)
+*   35.7000 MHz: Shows sync'd image with warning (would be 85Hz) - Good to see the SPI memory keeps up though.
+
+
+
+# Wall edge glitch
 
 In raybox-zero I've noticed that the texture on the very edge of wall block corners seems to be the one from the all *behind* it, sort of, sometimes.
 
@@ -102,6 +122,7 @@ It's also possible that it's the *distance* that's delayed?? In fact this seems 
     *   Total: 27 bits -- oh that's too many!
 *   SPI reg: Map divider, i.e. X and Y values that put in a false 'crosshair' wall stripe to create a smaller map region.
 *   Try Q12.12? Might affect timing.
+*   More colour depth.
 
 
 # EW submission prep
@@ -117,7 +138,6 @@ It's also possible that it's the *distance* that's delayed?? In fact this seems 
 # Plan of attack
 
 *   try running OL harden on laptop
-*   find out: how slow can we run the pixel clock?
 *   add photos and notes about SPI board
 *   finish implementing macro pins logic, inc. oebs
 *   work out how to name the macro pins so they match up with caravel, etc: do caravel version as well as matt's wrapped MPW convention
