Minor 0165 update again

--- a/0165-2023-10-24.md
+++ b/0165-2023-10-24.md
@@ -6,6 +6,20 @@
 
 # raybox-zero OpenLane hardening
 
+# Accomplishments
+
+*   Updated texy.py: `--select` works in order specified now.
+*   Built some new wall textures.
+*   Implemented Quartus PLL in raybox-zero de0nano.
+*   Tested 640x480 VGA with different pixel clocks. My monitor can sync with a pixel clock from 20.250MHz (~48fps) up to 32.500MHz (~77fps)
+
+
+# Hardening raybox-zero@ew
+
+*   VM on laptop has 16GB RAM and 12 CPUs.
+*   Commit I'll use is 876a69ab468541a8a9b1ab3a8af49cdec7defc90
+
+
 # SPI glitching yesterday
 
 I suspect the glitching problems I was having with one of my SPI flash ROM memories yesterday (BG25Q80) might've been due to SCLK not having a clean signal. Certainly when I touched it with my finger or added a dangling wire it seemed to improve, and one of the symptoms I'm seeing is that occasionally an output nibble appears to be skipped; this could be due to the chip detecting an extra SCLK falling edge.
