Minor 0165 update re hardening

--- a/0165-2023-10-24.md
+++ b/0165-2023-10-24.md
@@ -17,7 +17,19 @@
 # Hardening raybox-zero@ew
 
 *   VM on laptop has 16GB RAM and 12 CPUs.
-*   Commit I'll use is 876a69ab468541a8a9b1ab3a8af49cdec7defc90
+*   Commit I'll use is [876a69a](https://github.com/algofoogle/raybox-zero/commit/876a69ab468541a8a9b1ab3a8af49cdec7defc90)
+*   This version includes full QSPI texture ROM reader with RGB222 colour working.
+*   Last time I did the harden was in [0160](https://github.com/algofoogle/journal/blob/c4c3111a35f03c27bca2c6d18344dfd3fc8400cd/0160-2023-10-16.md#harden-raybox-zero)
+
+## Steps to harden raybox-zero
+
+1.  Make sure we're in the `ew` branch
+2.  Check `config.tcl`
+
+
+# Next steps
+
+*   ...TBD...
 
 
 # SPI glitching yesterday
